LUT26056 : clean code & correct fieldsErrorMessage

--- a/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
+++ b/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
@@ -31,11 +31,7 @@
 									type="number" class="form-control"
 									id="nbPlacesToTake" name="nbPlacesToTake"
 									min="1" max="6"
-									<#if nbPlacesToTake??>
-										value=${nbPlacesToTake!''}
-									<#else>
-										value="1"
-									</#if>
+									value="${nbPlacesToTake?default(1)}"
 									title=""
 									oninput="displayInputsFromAntsModuleEvent(event)"
 									onkeydown="event.preventDefault()" required
