--- a/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
+++ b/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
@@ -8,54 +8,71 @@
 		</div>
 	</div>
 </div>
-<div class="currentStepContentRow">
-	<div class="container" id="current_step">
-		<form method="post" class="form" action="jsp/site/Portal.jsp?page=appointmentants&action=presearch">
-			<@messages errors=errors />
-			<input name="page" value="appointmentants" type="hidden">
-			<input name="starting_date_time" id="starting_date_time" value="${starting_date_time!''}" type="hidden">
-			<input name="id_form" id="id_form" value="${id_form!''}" type="hidden">
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 formGroupContainer">
-					<div class="form-group">
-						<label class="col-xs-12 col-sm-4 control-label">#i18n{module.appointment.ants.predemandenumber.label} </label>
-						<div class="col-xs-12 col-sm-8">
-							<input type="number" class="form-control" id="nbPlacesToTake" name="nbPlacesToTake" min="1" max="6" value="${nbPlacesToTake?default(1)}" title="" oninput="displayInputsFromAntsModuleEvent(event)" onkeydown="event.preventDefault()" required style="width:20%;">
-							<p class=""><small>#i18n{module.appointment.ants.predemandenumber.help}</small> </p>
+<div class="row currentStepContentRow">
+	<div class="col-xs-12">
+		<div class="container" id="current_step">
+			<form method="post" class="form-horizontal"
+				  action="jsp/site/Portal.jsp?page=appointmentants&action=presearch">
+				<@messages errors=errors />
+				<input name="page" value="appointmentants" type="hidden">
+				<input name="starting_date_time" id="starting_date_time" value="${starting_date_time!''}" type="hidden">
+				<input name="id_form" id="id_form" value="${id_form!''}" type="hidden">
+				<div class="row">
+					<div class="col-xs-12 col-sm-6">
+						<div class="col-xs-12 formGroupContainer">
+							<div class="form-group">
+								<label
+										class="col-xs-12 col-sm-4 control-label">#i18n{module.appointment.ants.predemandenumber.label}
+								</label>
+								<div class="col-xs-12 col-sm-8">
+									<input type="number" class="form-control" id="nbPlacesToTake" name="nbPlacesToTake"
+										   min="1" max="6" value="${nbPlacesToTake?default(1)}" title=""
+										   oninput="displayInputsFromAntsModuleEvent(event)"
+										   onkeydown="event.preventDefault()" required style="width:25%;">
+									<p class=""><small>#i18n{module.appointment.ants.predemandenumber.help}</small> </p>
+								</div>
+							</div>
+							<div class="form-group" id="form-group-default">
+								<label class="col-xs-12 col-sm-4 control-label"
+									   id="label-default">#i18n{module.appointment.ants.predemandeserial.label_default}</label>
+								<div class="col-xs-12 col-sm-8">
+									<input type="text" class="form-control" name="predemande_code_1"
+										   id="predemande_code_1" pattern="[A-Z0-9]{10}" maxlength=10 required />
+									<p class="help-text">
+										<small>#i18n{module.appointment.ants.predemandeserial.help} <a
+												href="https://ants.gouv.fr/"> ants.gouv.fr</a> </small>
+									<div id="warning-message" style="color: red;"></div>
+								</div>
+							</div>
+							<!-- Dynamically added containers will be rendered here -->
+							<div class="form-group" id="form-group-btn">
+								<div class="col-xs-12 col-sm-6 col-md-6 col-sm-offset-6 col-md-offset-6 text-right">
+									<button class="btn btn-primary" type="submit" name="action_presearch">
+										<i class="fa fa-check me-1 " aria-hidden="true"></i> Valider
+									</button>
+								</div>
+							</div>
 						</div>
 					</div>
-					<div class="form-group"  id="input-container">
-						<label class="col-xs-12 col-sm-4 control-label" id="label-default">#i18n{module.appointment.ants.predemandeserial.label_default}</label>
-						<div class="col-xs-12 col-sm-8">
-							<input type="text" class="form-control"  name="predemande_code_1" id="predemande_code_1" pattern="[A-Z0-9]{10}" maxlength=10 required />
-							<p class="help-text">
-								<small>#i18n{module.appointment.ants.predemandeserial.help} <a href="https://ants.gouv.fr/"> ants.gouv.fr</a> </small>
-							<div id="warning-message" style="color: red;"></div>
-						</div>
-						<!-- This container will hold dynamically added inputs -->
-					</div>
-					<div class="form-group">
-						<div class="col-xs-12 col-sm-6 col-md-6 col-sm-offset-6 col-md-offset-6 text-right">
-							<button class="btn btn-primary" type="submit" name="action_presearch">
-								<i class="fa fa-check me-1 " aria-hidden="true"></i> Valider
-							</button>
-						</div>
+					<div class="col-xs-12 col-sm-6">
+						<div class="formGroupContainer" id="message-search"></div>
 					</div>
 				</div>
-		</form>
+			</form>
+		</div>
 	</div>
 </div>
 
 <script>
 
     const labels = [
-            "#i18n{module.appointment.ants.predemandeserial.label_default}",
-            "#i18n{module.appointment.ants.predemandeserial.label_1}",
-            "#i18n{module.appointment.ants.predemandeserial.label_2}",
-            "#i18n{module.appointment.ants.predemandeserial.label_3}",
-            "#i18n{module.appointment.ants.predemandeserial.label_4}",
-            "#i18n{module.appointment.ants.predemandeserial.label_5}",
-            "#i18n{module.appointment.ants.predemandeserial.label_6}"
+        "#i18n{module.appointment.ants.predemandeserial.label_default}",
+        "#i18n{module.appointment.ants.predemandeserial.label_1}",
+        "#i18n{module.appointment.ants.predemandeserial.label_2}",
+        "#i18n{module.appointment.ants.predemandeserial.label_3}",
+        "#i18n{module.appointment.ants.predemandeserial.label_4}",
+        "#i18n{module.appointment.ants.predemandeserial.label_5}",
+        "#i18n{module.appointment.ants.predemandeserial.label_6}"
     ];
 
     const inputElementType = "#i18n{module.appointment.ants.predemandeForm.inputElementType}";
@@ -68,15 +85,20 @@
     const antsLink = "#i18n{module.appointment.ants.predemandeForm.antsLink}";
     const firstPartAntsPlatformLink = '#i18n{module.appointment.ants.predemandeForm.firstPartAntsPlatformLink}';
     const lastPartAntsPlatformLink = '#i18n{module.appointment.ants.predemandeForm.lastPartAntsPlatformLink}';
-    const predemandeInputHelpMassage ="#i18n{module.appointment.ants.predemandeserial.help}";
-    const erroMessage ="#i18n{module.appointment.ants.predemandeForm.erroMessage}";
-    const predemandeIds = []; // Array to store predemande IDs
+    const predemandeInputHelpMassage = "#i18n{module.appointment.ants.predemandeserial.help}";
+    const erroMessage = "#i18n{module.appointment.ants.predemandeForm.erroMessage}";
 
-    function predemandeCodeInput(inputValue, inputContainer, labelDefault)
-    {
-        // Clear existing inputs except the first one
-        while (inputContainer.childElementCount > 2) {
-            inputContainer.removeChild(inputContainer.lastChild);
+    function predemandeCodeInput(inputValue, inputContainer, labelDefault) {
+
+        // Select all elements with class "form-group"
+        var formGroups = document.querySelectorAll('.form-group');
+
+        // Loop through each form-group element and remove it if it's not form-group-btn
+        for (var i = 2; i < formGroups.length; i++) {
+            var id = formGroups[i].getAttribute('id');
+            if (id !== 'form-group-btn') {
+                formGroups[i].parentNode.removeChild(formGroups[i]);
+            }
         }
 
         // handle label-default
@@ -86,23 +108,23 @@
         const fragment = document.createDocumentFragment();
         for (let i = 2; i <= inputValue; i++) {
 
+            const formGroupDiv = document.createElement(divTagName);
+            formGroupDiv.classList.add("form-group");
+
             const inputLabel = document.createElement(labelTagName);
             inputLabel.textContent = labels[i];
-            inputLabel.classList.add("col-xs-12");
-            inputLabel.classList.add("col-sm-4");
-            inputLabel.classList.add("control-label");
-
+            inputLabel.classList.add('col-xs-12', 'col-sm-4', 'control-label');
 
             const inputWrapper = document.createElement(divTagName);
-            inputWrapper.classList.add("col-xs-12");
-            inputWrapper.classList.add("col-sm-8");
+            inputWrapper.classList.add('col-xs-12', 'col-sm-8');
 
             const inputElement = document.createElement(inputTagName);
             inputElement.type = inputElementType;
-            inputElement.name = inputElementNameSuffix.concat(i);
-            inputElement.id= inputElementNameSuffix.concat(i);
-            inputElement.pattern= inputElementPattern;
             inputElement.classList.add("form-control");
+            inputElement.name = inputElementNameSuffix.concat(i);
+            inputElement.id = inputElementNameSuffix.concat(i);
+            inputElement.pattern = inputElementPattern;
+            inputElement.required = true;
 
             inputWrapper.appendChild(inputElement);
 
@@ -115,38 +137,40 @@
             helpText.appendChild(helpTextSmall);
             inputWrapper.appendChild(helpText);
 
-            fragment.appendChild(inputLabel);
-            fragment.appendChild(inputWrapper);
+            formGroupDiv.appendChild(inputLabel);
+            formGroupDiv.appendChild(inputWrapper);
+
+            fragment.appendChild(formGroupDiv);
         }
 
-        inputContainer.appendChild(fragment);
+        inputContainer.parentNode.insertBefore(fragment, inputContainer.nextSibling);
 
     }
 
-    function displayInputsFromAntsUrlParameterValue()
-    {
+    function displayInputsFromAntsUrlParameterValue() {
         const inputValue = document.getElementById('nbPlacesToTake').value;
-        const inputContainer = document.getElementById('input-container');
+        const inputContainer = document.getElementById('form-group-default');
         const labelDefault = document.getElementById('label-default');
-        if (inputValue <= 6)
-        {
+        if (inputValue <= 6) {
             predemandeCodeInput(inputValue, inputContainer, labelDefault);
         }
-        else
-        {
+        else {
             alert(erroMessage);
         }
     }
 
     displayInputsFromAntsUrlParameterValue();
 
-    function displayInputsFromAntsModuleEvent(event)
-    {
+    function displayInputsFromAntsModuleEvent(event) {
         const inputValue = parseInt(event.target.value);
-        const inputContainer = document.getElementById('input-container');
+        const inputContainer = document.getElementById('form-group-default');
         const labelDefault = document.getElementById('label-default');
 
         predemandeCodeInput(inputValue, inputContainer, labelDefault);
     }
+
+    $(function () {
+        $('#message-search').html($('#searchmessage').html());
+    });
 
 </script>
