--- a/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
+++ b/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
@@ -39,6 +39,7 @@
 								<div class="col-xs-12 col-sm-8">
 									<input type="text" class="form-control" name="predemande_code_1"
 										   id="predemande_code_1" pattern="[A-Z0-9]{10}" maxlength=10 required
+										   value="${(list_ants_codes[0])!''}"
 										   oninvalid="setCustomValidityMessage(id)"
 										   oninput="setCustomValidity('')"/>
 									<p class="help-text">
@@ -102,6 +103,9 @@
 
     function predemandeCodeInput(inputValue, inputContainer, labelDefault) {
 
+		// Retrieve the list of ANTS codes if they were entered previously
+		var listAntsCodes = [<#if list_ants_codes??><#list list_ants_codes as code>'${code}',</#list></#if>];
+
         // Select all elements with class "form-group"
         var formGroups = document.querySelectorAll('.form-group');
 
@@ -140,6 +144,14 @@
             inputElement.required = true;
 
             inputWrapper.appendChild(inputElement);
+
+            // Set the application number value in the input field
+            if(listAntsCodes[i-1]) {
+				inputElement.value = listAntsCodes[i-1];
+			}
+			else {
+				inputElement.value = "";
+			}
 
             var linkToAntsPlateform = firstPartAntsPlatformLink.concat(antsLink).concat(lastPartAntsPlatformLink);
 
