--- a/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
+++ b/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
@@ -22,9 +22,7 @@
 					<div class="col-xs-12 col-sm-6">
 						<div class="col-xs-12 formGroupContainer">
 							<div class="form-group">
-								<label
-										class="col-xs-12 col-sm-4 control-label">#i18n{module.appointment.ants.predemandenumber.label}
-								</label>
+								<label class="col-xs-12 col-sm-4 control-label">#i18n{module.appointment.ants.predemandenumber.label}								</label>
 								<div class="col-xs-12 col-sm-8">
 									<input type="number" class="form-control" id="nbPlacesToTake" name="nbPlacesToTake"
 										   min="1" max="6" value="${nbPlacesToTake?default(1)}" title=""
@@ -79,16 +77,16 @@
         "#i18n{module.appointment.ants.predemandeserial.label_6}"
     ];
 
-    const inputElementType = "#i18n{module.appointment.ants.predemandeForm.inputElementType}";
-    const inputElementNameSuffix = "#i18n{module.appointment.ants.predemandeForm.inputElementNameSuffix}";
-    const inputElementPattern = "#i18n{module.appointment.ants.predemandeForm.inputElementPattern}";
-    const divTagName = "#i18n{module.appointment.ants.predemandeForm.divTagName}";
-    const labelTagName = "#i18n{module.appointment.ants.predemandeForm.labelTagName}";
-    const inputTagName = "#i18n{module.appointment.ants.predemandeForm.inputTagName}";
-    const helptTextClassName = "#i18n{module.appointment.ants.predemandeForm.helptTextClassName}";
-    const antsLink = "#i18n{module.appointment.ants.predemandeForm.antsLink}";
-    const firstPartAntsPlatformLink = '#i18n{module.appointment.ants.predemandeForm.firstPartAntsPlatformLink}';
-    const lastPartAntsPlatformLink = '#i18n{module.appointment.ants.predemandeForm.lastPartAntsPlatformLink}';
+    const inputElementType = "text";
+    const inputElementNameSuffix = "predemande_code_";
+    const inputElementPattern = "[A-Z0-9]{10}";
+    const divTagName = "div";
+    const labelTagName = "label";
+    const inputTagName = "input";
+    const helptTextClassName = "help-text";
+    const antsLink = "https://ants.gouv.fr";
+    const firstPartAntsPlatformLink = '<a href="';
+    const lastPartAntsPlatformLink = '">ants.gouv.fr</a>';
     const predemandeInputHelpMassage = "#i18n{module.appointment.ants.predemandeserial.help}";
     const erroMessage = "#i18n{module.appointment.ants.predemandeForm.erroMessage}";
     const customValidityMessage = "#i18n{module.appointment.ants.predemandeForm.customValidityMessage}";
@@ -184,12 +182,11 @@
         const inputValue = document.getElementById('nbPlacesToTake').value;
         const inputContainer = document.getElementById('form-group-default');
         const labelDefault = document.getElementById('label-default');
-        if (inputValue <= 6) {
-            predemandeCodeInput(inputValue, inputContainer, labelDefault);
-        }
-        else {
+		if (inputValue <= 6) {
+			predemandeCodeInput(inputValue, inputContainer, labelDefault);
+		} else {
             alert(erroMessage);
-        }
+		}
     }
 
     displayInputsFromAntsUrlParameterValue();
