--- a/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
+++ b/webapp/WEB-INF/templates/skin/plugins/appointment/modules/ants/predemandeForm.html
@@ -21,13 +21,15 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-6">
 						<div class="col-xs-12 formGroupContainer">
-							<div class="form-group">
-								<label class="col-xs-12 col-sm-4 control-label">#i18n{module.appointment.ants.predemandenumber.label}								</label>
+							<div class="form-group" id="nbPlacesToTakeGroup">
+								<label
+										class="col-xs-12 col-sm-4 control-label">#i18n{module.appointment.ants.predemandenumber.label}
+								</label>
 								<div class="col-xs-12 col-sm-8">
 									<input type="number" class="form-control" id="nbPlacesToTake" name="nbPlacesToTake"
-										   min="1" max="6" value="${nbPlacesToTake?default(1)}" title=""
+										   min="1" max="6" step="1" value="${nbPlacesToTake?default(1)}" title=""
 										   oninput="displayInputsFromAntsModuleEvent(event)"
-										   onkeydown="event.preventDefault()" required style="width:25%;">
+										   required style="width:25%;">
 									<p class=""><small>#i18n{module.appointment.ants.predemandenumber.help}</small> </p>
 								</div>
 							</div>
@@ -192,11 +194,31 @@
     displayInputsFromAntsUrlParameterValue();
 
     function displayInputsFromAntsModuleEvent(event) {
+        const group = document.getElementById('nbPlacesToTakeGroup');
+        const inputNbToTake = document.getElementById('nbPlacesToTake');
         const inputValue = parseInt(event.target.value);
         const inputContainer = document.getElementById('form-group-default');
         const labelDefault = document.getElementById('label-default');
+        const helpBlock = document.getElementById('help-block');
 
-        predemandeCodeInput(inputValue, inputContainer, labelDefault);
+        if (inputValue <= 6) {
+            if (helpBlock) {
+                helpBlock.remove();
+            }
+            group.classList.remove('has-warning');
+            predemandeCodeInput(inputValue, inputContainer, labelDefault);
+        } else {
+            if (!helpBlock) {
+                const errorElement = document.createElement('span');
+                errorElement.setAttribute("id", "help-block");
+                errorElement.classList.add("help-block");
+                errorElement.textContent = erroMessage;
+                group.prepend(errorElement);
+            }
+            group.classList.add('has-warning');
+            event.target.value = 1;
+            predemandeCodeInput(1, inputContainer, labelDefault);
+        }
     }
 
     $(function () {
